Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectBoolObj.quorum
class Main
    action Main
        Object v = Test()
        Boolean var = cast(Boolean, v)
        if var:GetValue() = true
            output "passed"
        end
    end

    action Test() returns Object
        Boolean var
        var:SetValue(true)
        return var
    end
end