Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextBoolObj.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        Boolean var
        var:SetValue(true)
        return var
    end
end